add columna eliminar registro grilla dgvclientedevolucion

--- a/GestionDePallets/GestionDePallets/GestionDePallets.vbproj
+++ b/GestionDePallets/GestionDePallets/GestionDePallets.vbproj
@@ -348,6 +348,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="palletIcon.ico" />
+    <None Include="Resources\borrar.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
